rollup: emit typescript .d.ts files
Note that currently a rootDir needs to be specified in tsconfig.json,
see https://github.com/rollup/plugins/issues/61#issuecomment-596270901

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "noImplicitThis": true
+    "noImplicitThis": true,
+    "declaration": true,
+    "declarationDir": "dist",
+    "rootDir": "src"
   }
 }
 
