--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/nimiq/ledger-api#readme",
   "devDependencies": {
     "@ledgerhq/hw-transport": "^5.9.0",
+    "@nimiq/core-web": "^1.5.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-typescript": "^4.0.0",
