--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "tslib": "^1.11.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^3.8.3"
