--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup": "^2.0.2",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "tslib": "^1.11.1",
