low-level-api: use nimiq core instead of tweetnacl, blakejs and base32.js
This reduces the bundle size (uncompressed and unminified) from ~90kb to
~10kb. On the other hand, the nimiq core and wasm needs to be loaded which
typically happens anyways though.

--- a/package.json
+++ b/package.json
@@ -47,9 +47,6 @@
     "@ledgerhq/hw-transport-u2f": "^5.9.0",
     "@nimiq/core-web": "^1.5.4",
     "@types/ledgerhq__hw-transport": "^4.21.2",
-    "@types/ledgerhq__hw-transport-u2f": "^4.21.1",
-    "base32.js": "^0.1.0",
-    "blakejs": "^1.1.0",
-    "tweetnacl": "^1.0.3"
+    "@types/ledgerhq__hw-transport-u2f": "^4.21.1"
   }
 }
