--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@ledgerhq/hw-transport": "^5.9.0",
     "@ledgerhq/hw-transport-u2f": "^5.9.0",
+    "@ledgerhq/hw-transport-web-ble": "^5.11.0",
     "@ledgerhq/hw-transport-webhid": "^5.11.0",
     "@ledgerhq/hw-transport-webusb": "^5.11.0",
     "@nimiq/core-web": "^1.5.4",
