--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ledgerhq/hw-transport-web-ble": "^5.11.0",
     "@ledgerhq/hw-transport-webhid": "^5.11.0",
     "@ledgerhq/hw-transport-webusb": "^5.11.0",
+    "@ledgerhq/logs": "^5.11.0",
     "@nimiq/core-web": "^1.5.4",
     "@types/ledgerhq__hw-transport": "^4.21.2",
     "@types/ledgerhq__hw-transport-u2f": "^4.21.1",
