--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/high-level-api/ledger-api.cjs.js",
   "module": "dist/high-level-api/ledger-api.es.js",
   "types": "dist/high-level-api/ledger-api.d.ts",
-  "files": ["dist", "!dist/demo"],
+  "files": [
+    "dist",
+    "!dist/demo"
+  ],
   "sideEffects": false,
   "scripts": {
     "build": "rollup --config --configProduction",
@@ -28,32 +31,32 @@
   },
   "homepage": "https://github.com/nimiq/ledger-api#readme",
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.0.1",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-alias": "^3.1.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^4.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "eslint-config-airbnb-typescript": "^7.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "rollup": "^2.7.6",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-plugin-import": "^2.20.2",
+    "rollup": "^2.10.2",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-sourcemaps": "^0.5.0",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "rollup-plugin-sourcemaps": "^0.6.2",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.2"
   },
   "dependencies": {
-    "@ledgerhq/hw-transport": "^5.9.0",
-    "@ledgerhq/hw-transport-u2f": "^5.9.0",
-    "@ledgerhq/hw-transport-web-ble": "^5.11.0",
-    "@ledgerhq/hw-transport-webhid": "^5.11.0",
-    "@ledgerhq/hw-transport-webusb": "^5.11.0",
-    "@ledgerhq/logs": "^5.11.0",
-    "@nimiq/core-web": "^1.5.4",
+    "@ledgerhq/hw-transport": "^5.15.0",
+    "@ledgerhq/hw-transport-u2f": "^5.15.0",
+    "@ledgerhq/hw-transport-web-ble": "^5.15.0",
+    "@ledgerhq/hw-transport-webhid": "^5.15.0",
+    "@ledgerhq/hw-transport-webusb": "^5.15.0",
+    "@ledgerhq/logs": "^5.15.0",
+    "@nimiq/core-web": "^1.5.6",
     "@types/ledgerhq__hw-transport": "^4.21.2",
     "@types/ledgerhq__hw-transport-u2f": "^4.21.1",
     "@types/ledgerhq__hw-transport-webusb": "^4.70.0"
