Document differences between different transport types

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/high-level-api/ledger-api.es.js",
   "types": "dist/high-level-api/ledger-api.d.ts",
   "files": [
+    "transport-comparison.md",
     "dist",
     "!dist/demo"
   ],
