--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@ledgerhq/hw-transport": "^5.17.0",
     "@ledgerhq/hw-transport-u2f": "^5.17.0",
     "@ledgerhq/hw-transport-web-ble": "^5.17.0",
+    "@ledgerhq/hw-transport-webauthn": "^5.17.0",
     "@ledgerhq/hw-transport-webhid": "^5.17.0",
     "@ledgerhq/hw-transport-webusb": "^5.17.0",
     "@ledgerhq/logs": "^5.17.0",
