--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/nimiq/ledger-api#readme",
   "devDependencies": {
+    "@rbnlffl/rollup-plugin-eslint": "^1.1.4",
     "@rollup/plugin-alias": "^3.1.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
@@ -42,7 +43,6 @@
     "eslint-plugin-import": "^2.20.2",
     "rollup": "^2.10.2",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-serve": "^1.0.1",
