--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rbnlffl/rollup-plugin-eslint": "^1.1.4",
     "@rollup/plugin-alias": "^3.1.0",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -63,6 +64,7 @@
     "@types/ledgerhq__hw-app-btc": "^5.19.2",
     "@types/ledgerhq__hw-transport": "^4.21.2",
     "@types/ledgerhq__hw-transport-u2f": "^4.21.1",
-    "@types/ledgerhq__hw-transport-webusb": "^4.70.0"
+    "@types/ledgerhq__hw-transport-webusb": "^4.70.0",
+    "bitcoinjs-lib": "^5.2.0"
   }
 }
