Update dependencies and replace unmaintained rollup-plugin-node-polyfills

--- a/package.json
+++ b/package.json
@@ -33,38 +33,39 @@
   "homepage": "https://github.com/nimiq/ledger-api#readme",
   "devDependencies": {
     "@rbnlffl/rollup-plugin-eslint": "^1.1.4",
-    "@rollup/plugin-alias": "^3.1.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-typescript": "^4.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-plugin-import": "^2.20.2",
-    "rollup": "^2.10.2",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-typescript": "^8.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "rollup": "^2.38.5",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-sourcemaps": "^0.6.2",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.2"
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-polyfill-node": "^0.5.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@ledgerhq/hw-app-btc": "^5.34.1",
-    "@ledgerhq/hw-transport": "^5.34.0",
-    "@ledgerhq/hw-transport-u2f": "^5.34.0",
-    "@ledgerhq/hw-transport-web-ble": "^5.34.0",
-    "@ledgerhq/hw-transport-webauthn": "^5.34.0",
-    "@ledgerhq/hw-transport-webhid": "^5.34.0",
-    "@ledgerhq/hw-transport-webusb": "^5.34.1",
-    "@ledgerhq/logs": "^5.30.0",
-    "@nimiq/core-web": "^1.5.6",
+    "@ledgerhq/hw-app-btc": "^5.41.0",
+    "@ledgerhq/hw-transport": "^5.41.0",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
+    "@ledgerhq/hw-transport-web-ble": "^5.41.0",
+    "@ledgerhq/hw-transport-webauthn": "^5.36.0-deprecated",
+    "@ledgerhq/hw-transport-webhid": "^5.41.0",
+    "@ledgerhq/hw-transport-webusb": "^5.41.0",
+    "@ledgerhq/logs": "^5.41.0",
+    "@nimiq/core-web": "^1.5.7",
     "@types/ledgerhq__hw-app-btc": "^5.19.2",
-    "@types/ledgerhq__hw-transport": "^4.21.2",
-    "@types/ledgerhq__hw-transport-u2f": "^4.21.1",
-    "@types/ledgerhq__hw-transport-webusb": "^4.70.0",
+    "@types/ledgerhq__hw-transport": "^4.21.3",
+    "@types/ledgerhq__hw-transport-u2f": "^4.21.2",
+    "@types/ledgerhq__hw-transport-webusb": "^4.70.1",
     "bitcoinjs-lib": "^5.2.0"
   }
 }
