--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "rollup --config --configProduction",
-    "serve": "rollup --config --watch --configServe"
+    "serve": "rollup --config --watch --configServe",
+    "speculos-bridge": "node speculos-bridge/speculos-bridge.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   },
   "homepage": "https://github.com/nimiq/ledger-api#readme",
   "devDependencies": {
+    "@ledgerhq/hw-transport-node-speculos": "^5.46.0",
     "@ledgerhq/logs": "^5.41.0",
     "@rbnlffl/rollup-plugin-eslint": "^1.1.4",
     "@rollup/plugin-alias": "^3.1.2",
