--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "devDependencies": {
     "@ledgerhq/hw-transport-node-speculos": "^6.27.20",
     "@ledgerhq/logs": "^6.11.0",
-    "@rbnlffl/rollup-plugin-eslint": "^1.1.4",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-eslint": "^9.0.5",
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -45,9 +45,9 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "bitcoinjs-message": "^2.2.0",
-    "eslint": "^7.19.0",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.29.0",
     "rollup": "^2.68.0",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^2.0.0",
