--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.5",
     "@rollup/plugin-virtual": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
