package.json: add type-shims.d.ts to npm package

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "dist/high-level-api/ledger-api.d.ts",
   "files": [
     "transport-comparison.md",
+    "src/lib/type-shims.d.ts",
     "dist",
     "!dist/demo"
   ],
