--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@nimiq/core-web": "^1.6.2",
     "@types/ledgerhq__hw-transport-u2f": "^4.21.4",
     "@types/w3c-web-usb": "^1.0.6",
+    "bip32": "^2.0.6",
     "bitcoinjs-lib": "^5.2.0",
     "buffer": "^6.0.3",
     "readable-stream": "^4.4.2"
