--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "transport-comparison.md",
     "src/shared/type-shims.d.ts",
     "dist",
-    "!dist/demo"
+    "!dist/demo",
+    "patches"
   ],
   "sideEffects": false,
   "scripts": {
     "build": "rollup --config --configProduction",
     "serve": "rollup --config --watch --configServe",
-    "speculos-bridge": "node speculos-bridge/speculos-bridge.js"
+    "speculos-bridge": "node speculos-bridge/speculos-bridge.js",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -75,7 +77,9 @@
     "@types/ledgerhq__hw-transport-u2f": "^4.21.4",
     "@types/w3c-web-usb": "^1.0.6",
     "bip32": "^2.0.6",
-    "bitcoinjs-lib": "^5.2.0"
+    "bitcoinjs-lib": "^5.2.0",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0"
   },
   "resolutions": {
     "rollup-plugin-sourcemaps/@rollup/pluginutils": "^5.0.5"
